# yaroshevskii_cplusplus_labs

./: CMakeLists.txt  RiemmanSolver.cpp  RiemmanSolver.h  csvParser.h  mHM.h  mLife.cpp  mLife.h  mUniverse.cpp  mUniverse.h  mWeakPtr.h  main.cpp  main.h  prototype.h  renderArea.cpp  renderArea.h  test.csv  test3_1_2.cpp  test3_3_4.h
task0/: main.cpp
task2/: main.cpp
task4/: CMakeLists.txt  Huffman.cpp  Huffman.h  HuffmanNode.cpp  HuffmanNode.h  main.cpp
untitled/: CMakeLists.txt
